--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <main class="main-content">
       <!-- section-hero -->
 
-      <section class="hero section">
+      <section class="hero section overlay">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="modal-button" type="button">Order Service</button>
@@ -70,6 +70,11 @@
           <h2 class="visually-hidden">Company features</h2>
           <ul class="list features-list">
             <li class="text-list">
+              <div class="icon-features">
+                <svg style="width: 60px; height: 64px">
+                  <use href="./images/symbol-defs.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="suptitle">Strategy</h3>
               <p class="text-item">
                 Our goal is to identify the business problem to walk away with the perfect and
@@ -77,6 +82,11 @@
               </p>
             </li>
             <li class="text-list">
+              <div class="icon-features">
+                <svg style="width: 60px; height: 64px">
+                  <use href="./images/symbol-defs.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="suptitle">Punctuality</h3>
               <p class="text-item">
                 Bring the key message to the brand's audience for the best price within the shortest
@@ -84,6 +94,11 @@
               </p>
             </li>
             <li class="text-list">
+              <div class="icon-features">
+                <svg style="width: 60px; height: 64px">
+                  <use href="./images/symbol-defs.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="suptitle">Diligence</h3>
               <p class="text-item">
                 Research and confirm brands that present the strongest digital growth opportunities
@@ -91,6 +106,11 @@
               </p>
             </li>
             <li class="text-list">
+              <div class="icon-features">
+                <svg style="width: 60px; height: 64px">
+                  <use href="./images/symbol-defs.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="suptitle">Technologies</h3>
               <p class="text-item">
                 Design practice focused on digital experiences. We bring forth a deep passion for
@@ -155,6 +175,36 @@
               <div class="name-workers">
                 <h3 class="suptitle-name">Mark Guerrero</h3>
                 <p class="profession">Product Designer</p>
+                <ul class="list social">
+                  <li>
+                    <a class="link" href="/">
+                      <svg style="width: 40px; height: 40px">
+                        <use class="icon-social" href="./images/symbol-defs.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="link link-social" href="/">
+                      <svg class="icon-social" style="width: 40px; height: 40px">
+                        <use href="./images/symbol-defs.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="link link-social" href="/">
+                      <svg class="icon-social" style="width: 40px; height: 40px">
+                        <use href="./images/symbol-defs.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="link link-social" href="/">
+                      <svg class="icon-social" style="width: 40px; height: 40px">
+                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-company-members">
@@ -168,6 +218,36 @@
               <div class="name-workers">
                 <h3 class="suptitle-name">Tom Ford</h3>
                 <p class="profession">Frontend Developer</p>
+                <ul class="list social">
+                  <li>
+                    <a class="link" href="/">
+                      <svg style="width: 40px; height: 40px">
+                        <use class="icon-social" href="./images/symbol-defs.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="link link-social" href="/">
+                      <svg class="icon-social" style="width: 40px; height: 40px">
+                        <use href="./images/symbol-defs.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="link link-social" href="/">
+                      <svg class="icon-social" style="width: 40px; height: 40px">
+                        <use href="./images/symbol-defs.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="link link-social" href="/">
+                      <svg class="icon-social" style="width: 40px; height: 40px">
+                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-company-members">
@@ -181,6 +261,36 @@
               <div class="name-workers">
                 <h3 class="suptitle-name">Camila Garcia</h3>
                 <p class="profession">Marketing</p>
+                <ul class="list social">
+                  <li>
+                    <a class="link" href="/">
+                      <svg style="width: 40px; height: 40px">
+                        <use class="icon-social" href="./images/symbol-defs.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="link link-social" href="/">
+                      <svg class="icon-social" style="width: 40px; height: 40px">
+                        <use href="./images/symbol-defs.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="link link-social" href="/">
+                      <svg class="icon-social" style="width: 40px; height: 40px">
+                        <use href="./images/symbol-defs.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="link link-social" href="/">
+                      <svg class="icon-social" style="width: 40px; height: 40px">
+                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-company-members">
@@ -194,7 +304,87 @@
               <div class="name-workers">
                 <h3 class="suptitle-name">Daniel Wilson</h3>
                 <p class="profession">UI Designer</p>
+                <ul class="list social">
+                  <li>
+                    <a class="link" href="/">
+                      <svg style="width: 40px; height: 40px">
+                        <use class="icon-social" href="./images/symbol-defs.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="link link-social" href="/">
+                      <svg class="icon-social" style="width: 40px; height: 40px">
+                        <use href="./images/symbol-defs.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="link link-social" href="/">
+                      <svg class="icon-social" style="width: 40px; height: 40px">
+                        <use href="./images/symbol-defs.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="link link-social" href="/">
+                      <svg class="icon-social" style="width: 40px; height: 40px">
+                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="customers section">
+        <div class="container">
+          <h2 class="last-title">Customers</h2>
+          <ul class="list list-customers">
+            <li class="logo-customers">
+              <a href="/">
+                <svg style="width: 104px; height: 56px">
+                  <use href="./images/symbol-defs.svg#ya-co"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="logo-customers">
+              <a href="/">
+                <svg style="width: 104px; height: 56px">
+                  <use href="./images/symbol-defs.svg#tagline-here"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="logo-customers">
+              <a href="/">
+                <svg style="width: 104px; height: 56px">
+                  <use href="./images/symbol-defs.svg#company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="logo-customers">
+              <a href="/">
+                <svg style="width: 104px; height: 56px">
+                  <use href="./images/symbol-defs.svg#foster-peters"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="logo-customers">
+              <a href="/">
+                <svg style="width: 104px; height: 56px">
+                  <use href="./images/symbol-defs.svg#brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="logo-customers">
+              <a href="/">
+                <svg style="width: 104px; height: 56px">
+                  <use href="./images/symbol-defs.svg#tag-line"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -204,14 +394,52 @@
     <!-- footer-container -->
 
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer link" href="./index.html"
-          >Web<span class="right-part-logo-footer">Studio</span></a
-        >
-        <p class="text-item-footer">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+      <div class="container footer-social-media">
+        <div>
+          <a class="logo-footer link" href="./index.html"
+            >Web<span class="right-part-logo-footer">Studio</span></a
+          >
+          <p class="text-item-footer">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+
+        <div class="social-footer">
+          <h3 class="subtitle-footer">Social media</h3>
+          <div class="icon-container">
+            <ul class="list icon-list">
+              <li class="icon-item">
+                <a class="link link-social-footer" href="/">
+                  <svg class="icon-social-footer">
+                    <use class="icon" href="./images/symbol-defs.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-item">
+                <a class="link link-social-footer" href="/">
+                  <svg class="icon-social-footer">
+                    <use class="icon" href="./images/symbol-defs.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-item">
+                <a class="link link-social-footer" href="/">
+                  <svg class="icon-social-footer">
+                    <use class="icon" href="./images/symbol-defs.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-item">
+                <a class="link link-social-footer" href="/">
+                  <svg class="icon-social-footer">
+                    <use class="icon" href="./images/symbol-defs.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
