--- a/portfolio.html
+++ b/portfolio.html
@@ -169,14 +169,52 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer link" href="./index.html"
-          >Web<span class="right-part-logo-footer">Studio</span></a
-        >
-        <p class="text-item-footer">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+      <div class="container footer-social-media">
+        <div>
+          <a class="logo-footer link" href="./index.html"
+            >Web<span class="right-part-logo-footer">Studio</span></a
+          >
+          <p class="text-item-footer">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+
+        <div class="social-footer">
+          <h3 class="subtitle-footer">Social media</h3>
+          <div class="icon-container">
+            <ul class="list icon-list">
+              <li class="icon-item">
+                <a class="link link-social-footer" href="/">
+                  <svg class="icon-social-footer">
+                    <use class="icon" href="./images/symbol-defs.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-item">
+                <a class="link link-social-footer" href="/">
+                  <svg class="icon-social-footer">
+                    <use class="icon" href="./images/symbol-defs.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-item">
+                <a class="link link-social-footer" href="/">
+                  <svg class="icon-social-footer">
+                    <use class="icon" href="./images/symbol-defs.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-item">
+                <a class="link link-social-footer" href="/">
+                  <svg class="icon-social-footer">
+                    <use class="icon" href="./images/symbol-defs.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
