--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
       <!-- section-company-features -->
 
       <section class="company-features section">
-        <div class="container">
+        <div class="container features-container">
           <h2 class="visually-hidden">Company features</h2>
           <ul class="list features-list">
             <li class="text-list">
               <div class="icon-features">
-                <svg style="width: 60px; height: 64px">
+                <svg style="width: 64px; height: 64px">
                   <use href="./images/symbol-defs.svg#antenna"></use>
                 </svg>
               </div>
@@ -83,7 +83,7 @@
             </li>
             <li class="text-list">
               <div class="icon-features">
-                <svg style="width: 60px; height: 64px">
+                <svg style="width: 64px; height: 64px">
                   <use href="./images/symbol-defs.svg#clock"></use>
                 </svg>
               </div>
@@ -95,7 +95,7 @@
             </li>
             <li class="text-list">
               <div class="icon-features">
-                <svg style="width: 60px; height: 64px">
+                <svg style="width: 64px; height: 64px">
                   <use href="./images/symbol-defs.svg#diagram"></use>
                 </svg>
               </div>
@@ -107,7 +107,7 @@
             </li>
             <li class="text-list">
               <div class="icon-features">
-                <svg style="width: 60px; height: 64px">
+                <svg style="width: 64px; height: 64px">
                   <use href="./images/symbol-defs.svg#astronaut"></use>
                 </svg>
               </div>
@@ -176,31 +176,31 @@
                 <h3 class="suptitle-name">Mark Guerrero</h3>
                 <p class="profession">Product Designer</p>
                 <ul class="list social">
-                  <li>
-                    <a class="link" href="/">
-                      <svg style="width: 40px; height: 40px">
-                        <use class="icon-social" href="./images/symbol-defs.svg#instagram"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a class="link link-social" href="/">
-                      <svg class="icon-social" style="width: 40px; height: 40px">
-                        <use href="./images/symbol-defs.svg#twitter"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a class="link link-social" href="/">
-                      <svg class="icon-social" style="width: 40px; height: 40px">
-                        <use href="./images/symbol-defs.svg#facebook"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a class="link link-social" href="/">
-                      <svg class="icon-social" style="width: 40px; height: 40px">
-                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -219,31 +219,31 @@
                 <h3 class="suptitle-name">Tom Ford</h3>
                 <p class="profession">Frontend Developer</p>
                 <ul class="list social">
-                  <li>
-                    <a class="link" href="/">
-                      <svg style="width: 40px; height: 40px">
-                        <use class="icon-social" href="./images/symbol-defs.svg#instagram"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a class="link link-social" href="/">
-                      <svg class="icon-social" style="width: 40px; height: 40px">
-                        <use href="./images/symbol-defs.svg#twitter"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a class="link link-social" href="/">
-                      <svg class="icon-social" style="width: 40px; height: 40px">
-                        <use href="./images/symbol-defs.svg#facebook"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a class="link link-social" href="/">
-                      <svg class="icon-social" style="width: 40px; height: 40px">
-                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -262,31 +262,31 @@
                 <h3 class="suptitle-name">Camila Garcia</h3>
                 <p class="profession">Marketing</p>
                 <ul class="list social">
-                  <li>
-                    <a class="link" href="/">
-                      <svg style="width: 40px; height: 40px">
-                        <use class="icon-social" href="./images/symbol-defs.svg#instagram"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a class="link link-social" href="/">
-                      <svg class="icon-social" style="width: 40px; height: 40px">
-                        <use href="./images/symbol-defs.svg#twitter"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a class="link link-social" href="/">
-                      <svg class="icon-social" style="width: 40px; height: 40px">
-                        <use href="./images/symbol-defs.svg#facebook"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a class="link link-social" href="/">
-                      <svg class="icon-social" style="width: 40px; height: 40px">
-                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -305,31 +305,31 @@
                 <h3 class="suptitle-name">Daniel Wilson</h3>
                 <p class="profession">UI Designer</p>
                 <ul class="list social">
-                  <li>
-                    <a class="link" href="/">
-                      <svg style="width: 40px; height: 40px">
-                        <use class="icon-social" href="./images/symbol-defs.svg#instagram"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a class="link link-social" href="/">
-                      <svg class="icon-social" style="width: 40px; height: 40px">
-                        <use href="./images/symbol-defs.svg#twitter"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a class="link link-social" href="/">
-                      <svg class="icon-social" style="width: 40px; height: 40px">
-                        <use href="./images/symbol-defs.svg#facebook"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a class="link link-social" href="/">
-                      <svg class="icon-social" style="width: 40px; height: 40px">
-                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                  <li style="width: 40px; height: 40px">
+                    <a class="link social-link" href="/">
+                      <svg class="icon-social" style="width: 16px; height: 16px">
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -345,44 +345,44 @@
           <h2 class="last-title">Customers</h2>
           <ul class="list list-customers">
             <li class="logo-customers">
-              <a href="/">
-                <svg style="width: 104px; height: 56px">
-                  <use href="./images/symbol-defs.svg#ya-co"></use>
+              <a class="link customers-link" href="/">
+                <svg class="icon-customers" style="width: 104px; height: 56px">
+                  <use href="/images/icons.svg#ya-co"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-customers">
-              <a href="/">
-                <svg style="width: 104px; height: 56px">
-                  <use href="./images/symbol-defs.svg#tagline-here"></use>
+              <a class="link customers-link" href="/">
+                <svg class="icon-customers" style="width: 104px; height: 56px">
+                  <use href="/images/icons.svg#tagline-here"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-customers">
-              <a href="/">
-                <svg style="width: 104px; height: 56px">
-                  <use href="./images/symbol-defs.svg#company"></use>
+              <a class="link customers-link" href="/">
+                <svg class="icon-customers" style="width: 104px; height: 56px">
+                  <use href="/images/icons.svg#company"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-customers">
-              <a href="/">
-                <svg style="width: 104px; height: 56px">
-                  <use href="./images/symbol-defs.svg#foster-peters"></use>
+              <a class="link customers-link" href="/">
+                <svg class="icon-customers" style="width: 104px; height: 56px">
+                  <use href="/images/icons.svg#foster-peters"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-customers">
-              <a href="/">
-                <svg style="width: 104px; height: 56px">
-                  <use href="./images/symbol-defs.svg#brand"></use>
+              <a class="link customers-link" href="/">
+                <svg class="icon-customers" style="width: 104px; height: 56px">
+                  <use href="/images/icons.svg#brand"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-customers">
-              <a href="/">
-                <svg style="width: 104px; height: 56px">
-                  <use href="./images/symbol-defs.svg#tag-line"></use>
+              <a class="link customers-link" href="/">
+                <svg class="icon-customers" style="width: 104px; height: 56px">
+                  <use href="/images/icons.svg#tag-line"></use>
                 </svg>
               </a>
             </li>
@@ -394,8 +394,8 @@
     <!-- footer-container -->
 
     <footer class="footer">
-      <div class="container footer-social-media">
-        <div>
+      <div class="container footer-container">
+        <div class="footer-content">
           <a class="logo-footer link" href="./index.html"
             >Web<span class="right-part-logo-footer">Studio</span></a
           >
@@ -406,39 +406,37 @@
         </div>
 
         <div class="social-footer">
-          <h3 class="subtitle-footer">Social media</h3>
-          <div class="icon-container">
-            <ul class="list icon-list">
-              <li class="icon-item">
-                <a class="link link-social-footer" href="/">
-                  <svg class="icon-social-footer">
-                    <use class="icon" href="./images/symbol-defs.svg#instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icon-item">
-                <a class="link link-social-footer" href="/">
-                  <svg class="icon-social-footer">
-                    <use class="icon" href="./images/symbol-defs.svg#twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icon-item">
-                <a class="link link-social-footer" href="/">
-                  <svg class="icon-social-footer">
-                    <use class="icon" href="./images/symbol-defs.svg#facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icon-item">
-                <a class="link link-social-footer" href="/">
-                  <svg class="icon-social-footer">
-                    <use class="icon" href="./images/symbol-defs.svg#linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <p class="title-media">Social media</p>
+          <ul class="list icon-list">
+            <li class="icon-item" style="width: 40px; height: 40px">
+              <a class="link link-social-footer" href="/">
+                <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item" style="width: 40px; height: 40px">
+              <a class="link link-social-footer" href="/">
+                <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item" style="width: 40px; height: 40px">
+              <a class="link link-social-footer" href="/">
+                <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item" style="width: 40px; height: 40px">
+              <a class="link link-social-footer" href="/">
+                <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
