--- a/portfolio.html
+++ b/portfolio.html
@@ -166,56 +166,54 @@
           </ul>
         </div>
       </section>
-    </main>
 
-    <footer class="footer">
-      <div class="container footer-social-media">
-        <div>
-          <a class="logo-footer link" href="./index.html"
-            >Web<span class="right-part-logo-footer">Studio</span></a
-          >
-          <p class="text-item-footer">
-            Increase the flow of customers and sales for your business with digital marketing &
-            growth solutions.
-          </p>
-        </div>
+      <footer class="footer">
+        <div class="container footer-container">
+          <div class="footer-content">
+            <a class="logo-footer link" href="./index.html"
+              >Web<span class="right-part-logo-footer">Studio</span></a
+            >
+            <p class="text-item-footer">
+              Increase the flow of customers and sales for your business with digital marketing &
+              growth solutions.
+            </p>
+          </div>
 
-        <div class="social-footer">
-          <h3 class="subtitle-footer">Social media</h3>
-          <div class="icon-container">
+          <div class="social-footer">
+            <p class="title-media">Social media</p>
             <ul class="list icon-list">
-              <li class="icon-item">
+              <li class="icon-item" style="width: 40px; height: 40px">
                 <a class="link link-social-footer" href="/">
-                  <svg class="icon-social-footer">
-                    <use class="icon" href="./images/symbol-defs.svg#instagram"></use>
+                  <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                    <use href="./images/icons.svg#instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li class="icon-item">
+              <li class="icon-item" style="width: 40px; height: 40px">
                 <a class="link link-social-footer" href="/">
-                  <svg class="icon-social-footer">
-                    <use class="icon" href="./images/symbol-defs.svg#twitter"></use>
+                  <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                    <use href="./images/icons.svg#twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li class="icon-item">
+              <li class="icon-item" style="width: 40px; height: 40px">
                 <a class="link link-social-footer" href="/">
-                  <svg class="icon-social-footer">
-                    <use class="icon" href="./images/symbol-defs.svg#facebook"></use>
+                  <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                    <use href="./images/icons.svg#facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li class="icon-item">
+              <li class="icon-item" style="width: 40px; height: 40px">
                 <a class="link link-social-footer" href="/">
-                  <svg class="icon-social-footer">
-                    <use class="icon" href="./images/symbol-defs.svg#linkedin"></use>
+                  <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                    <use href="./images/icons.svg#linkedin"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </main>
   </body>
 </html>
