--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li class="text-list">
               <div class="icon-features">
                 <svg style="width: 64px; height: 64px">
-                  <use href="./images/symbol-defs.svg#antenna"></use>
+                  <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
               <h3 class="suptitle">Strategy</h3>
@@ -84,7 +84,7 @@
             <li class="text-list">
               <div class="icon-features">
                 <svg style="width: 64px; height: 64px">
-                  <use href="./images/symbol-defs.svg#clock"></use>
+                  <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
               <h3 class="suptitle">Punctuality</h3>
@@ -96,7 +96,7 @@
             <li class="text-list">
               <div class="icon-features">
                 <svg style="width: 64px; height: 64px">
-                  <use href="./images/symbol-defs.svg#diagram"></use>
+                  <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
               <h3 class="suptitle">Diligence</h3>
@@ -108,7 +108,7 @@
             <li class="text-list">
               <div class="icon-features">
                 <svg style="width: 64px; height: 64px">
-                  <use href="./images/symbol-defs.svg#astronaut"></use>
+                  <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="suptitle">Technologies</h3>
