--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <ul class="list features-list">
             <li class="text-list">
               <div class="icon-features">
-                <svg style="width: 64px; height: 64px">
+                <svg width="64" height="64">
                   <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
@@ -83,7 +83,7 @@
             </li>
             <li class="text-list">
               <div class="icon-features">
-                <svg style="width: 64px; height: 64px">
+                <svg width="64" height="64">
                   <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
@@ -95,7 +95,7 @@
             </li>
             <li class="text-list">
               <div class="icon-features">
-                <svg style="width: 64px; height: 64px">
+                <svg width="64" height="64">
                   <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
@@ -107,7 +107,7 @@
             </li>
             <li class="text-list">
               <div class="icon-features">
-                <svg style="width: 64px; height: 64px">
+                <svg width="64" height="64">
                   <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
@@ -176,28 +176,28 @@
                 <h3 class="suptitle-name">Mark Guerrero</h3>
                 <p class="profession">Product Designer</p>
                 <ul class="list social">
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -219,28 +219,28 @@
                 <h3 class="suptitle-name">Tom Ford</h3>
                 <p class="profession">Frontend Developer</p>
                 <ul class="list social">
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -262,28 +262,28 @@
                 <h3 class="suptitle-name">Camila Garcia</h3>
                 <p class="profession">Marketing</p>
                 <ul class="list social">
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -305,28 +305,28 @@
                 <h3 class="suptitle-name">Daniel Wilson</h3>
                 <p class="profession">UI Designer</p>
                 <ul class="list social">
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li style="width: 40px; height: 40px">
+                  <li class="item-social" width="40" height="40">
                     <a class="link social-link" href="/">
                       <svg class="icon-social" style="width: 16px; height: 16px">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -346,43 +346,43 @@
           <ul class="list list-customers">
             <li class="logo-customers">
               <a class="link customers-link" href="/">
-                <svg class="icon-customers" style="width: 104px; height: 56px">
-                  <use href="/images/icons.svg#ya-co"></use>
+                <svg class="icon-customers" width="104" height="56">
+                  <use href="./images/icons.svg#ya-co"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-customers">
               <a class="link customers-link" href="/">
-                <svg class="icon-customers" style="width: 104px; height: 56px">
-                  <use href="/images/icons.svg#tagline-here"></use>
+                <svg class="icon-customers" width="104" height="56">
+                  <use href="./images/icons.svg#tagline-here"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-customers">
               <a class="link customers-link" href="/">
-                <svg class="icon-customers" style="width: 104px; height: 56px">
-                  <use href="/images/icons.svg#company"></use>
+                <svg class="icon-customers" width="104" height="56">
+                  <use href="./images/icons.svg#company"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-customers">
               <a class="link customers-link" href="/">
-                <svg class="icon-customers" style="width: 104px; height: 56px">
-                  <use href="/images/icons.svg#foster-peters"></use>
+                <svg class="icon-customers" width="104" height="56">
+                  <use href="./images/icons.svg#foster-peters"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-customers">
               <a class="link customers-link" href="/">
-                <svg class="icon-customers" style="width: 104px; height: 56px">
-                  <use href="/images/icons.svg#brand"></use>
+                <svg class="icon-customers" width="104" height="56">
+                  <use href="./images/icons.svg#brand"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-customers">
               <a class="link customers-link" href="/">
-                <svg class="icon-customers" style="width: 104px; height: 56px">
-                  <use href="/images/icons.svg#tag-line"></use>
+                <svg class="icon-customers" width="104" height="56">
+                  <use href="./images/icons.svg#tag-line"></use>
                 </svg>
               </a>
             </li>
@@ -408,30 +408,30 @@
         <div class="social-footer">
           <p class="title-media">Social media</p>
           <ul class="list icon-list">
-            <li class="icon-item" style="width: 40px; height: 40px">
+            <li class="icon-item" width="40" height="40">
               <a class="link link-social-footer" href="/">
-                <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                <svg class="icon-social-footer" width="24" height="24">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item" style="width: 40px; height: 40px">
+            <li class="icon-item" width="40" height="40">
               <a class="link link-social-footer" href="/">
-                <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                <svg class="icon-social-footer" width="24" height="24">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item" style="width: 40px; height: 40px">
+            <li class="icon-item" width="40" height="40">
               <a class="link link-social-footer" href="/">
-                <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                <svg class="icon-social-footer" width="24" height="24">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item" style="width: 40px; height: 40px">
+            <li class="icon-item" width="40" height="40">
               <a class="link link-social-footer" href="/">
-                <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                <svg class="icon-social-footer" width="24" height="24">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
