--- a/portfolio.html
+++ b/portfolio.html
@@ -182,30 +182,30 @@
           <div class="social-footer">
             <p class="title-media">Social media</p>
             <ul class="list icon-list">
-              <li class="icon-item" style="width: 40px; height: 40px">
+              <li class="icon-item" width="40" height="40">
                 <a class="link link-social-footer" href="/">
-                  <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                  <svg class="icon-social-footer" width="24" height="24">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li class="icon-item" style="width: 40px; height: 40px">
+              <li class="icon-item" width="40" height="40">
                 <a class="link link-social-footer" href="/">
-                  <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                  <svg class="icon-social-footer" width="24" height="24">
                     <use href="./images/icons.svg#twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li class="icon-item" style="width: 40px; height: 40px">
+              <li class="icon-item" width="40" height="40">
                 <a class="link link-social-footer" href="/">
-                  <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                  <svg class="icon-social-footer" width="24" height="24">
                     <use href="./images/icons.svg#facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li class="icon-item" style="width: 40px; height: 40px">
+              <li class="icon-item" width="40" height="40">
                 <a class="link link-social-footer" href="/">
-                  <svg class="icon-social-footer" style="width: 24px; height: 24px">
+                  <svg class="icon-social-footer" width="24" height="24">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
                 </a>
