Update index.html and portfolio.html

--- a/index.html
+++ b/index.html
@@ -176,30 +176,30 @@
                 <h3 class="suptitle-name">Mark Guerrero</h3>
                 <p class="profession">Product Designer</p>
                 <ul class="list social">
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -219,30 +219,30 @@
                 <h3 class="suptitle-name">Tom Ford</h3>
                 <p class="profession">Frontend Developer</p>
                 <ul class="list social">
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -262,30 +262,30 @@
                 <h3 class="suptitle-name">Camila Garcia</h3>
                 <p class="profession">Marketing</p>
                 <ul class="list social">
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -305,30 +305,30 @@
                 <h3 class="suptitle-name">Daniel Wilson</h3>
                 <p class="profession">UI Designer</p>
                 <ul class="list social">
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social" width="40" height="40">
+                  <li class="item-social">
                     <a class="link social-link" href="/">
-                      <svg class="icon-social" style="width: 16px; height: 16px">
+                      <svg class="icon-social" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -408,28 +408,28 @@
         <div class="social-footer">
           <p class="title-media">Social media</p>
           <ul class="list icon-list">
-            <li class="icon-item" width="40" height="40">
+            <li class="item-social">
               <a class="link link-social-footer" href="/">
                 <svg class="icon-social-footer" width="24" height="24">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item" width="40" height="40">
+            <li class="item-social">
               <a class="link link-social-footer" href="/">
                 <svg class="icon-social-footer" width="24" height="24">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item" width="40" height="40">
+            <li class="item-social">
               <a class="link link-social-footer" href="/">
                 <svg class="icon-social-footer" width="24" height="24">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item" width="40" height="40">
+            <li class="item-social">
               <a class="link link-social-footer" href="/">
                 <svg class="icon-social-footer" width="24" height="24">
                   <use href="./images/icons.svg#linkedin"></use>
