Update html and css

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
           </p>
         </div>
 
-        <div class="social-footer">
+        <div>
           <p class="title-media">Social media</p>
           <ul class="list icon-list">
             <li class="item-social">
